@@ -4,6 +4,10 @@ Next
     to divide line by 2 in rendering to match double scanned scanlines,
     so that the "graphical" text of "After the War" can render properly
     for machine=vgaonly. (joncampbell123).
+  - INT 10: If machine=ega, check the EGA switches on INT 10h modeset.
+    Some games force the EGA BIOS to use CGA 200-line text modes by
+    modifying those bits and then setting the mode ("After the War").
+    (joncampbell123).
 
 2024.12.04
   - Arrange memory device allocation so that it is possible to allocate
